# Pclash-for-android

./: PRIVACY_POLICY.md  README.md  build.gradle.kts  fix_gradle.py  fix_gradle_final.py  gradle.properties  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/java/com/pclash/: ApkBrokenActivity.kt  BaseActivity.kt  Constants.kt  CreateProfileActivity.kt  LogViewerActivity.kt  LogcatService.kt  LogsActivity.kt  MainActivity.kt  MainApplication.kt  PackagesActivity.kt  ProfileEditActivity.kt  ProfilesActivity.kt  ProxiesActivity.kt  SettingsActivity.kt  SettingsBehaviorActivity.kt  SettingsInterfaceActivity.kt  SupportActivity.kt  (+2 more)
app/src/main/res/layout/: activity_application_broken.xml  activity_logs.xml  activity_main.xml  activity_settings.xml  activity_support.xml  item_main_menu.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
app/src/main/res/values-zh/: strings.xml
app/src/main/res/values-zh-rHK/: strings.xml
app/src/main/res/values-zh-rTW/: strings.xml
common/: build.gradle.kts
common/src/main/: AndroidManifest.xml
core/: build.gradle.kts  clash.gradle.kts  mihomo.gradle.kts
core/src/main/: AndroidManifest.xml
core/src/main/cpp/: CMakeLists.txt  defer.cpp  init.cpp  log.cpp  main.cpp  patch.cpp  query.cpp  stubs.cpp  tun.cpp
core/src/main/golang/: libclash.h
design/: build.gradle.kts
design/src/main/: AndroidManifest.xml
service/: build.gradle.kts
service/src/main/: AndroidManifest.xml
service/src/main/res/values/: strings.xml
service/src/main/res/values-zh/: strings.xml
(+127 files in other folders)
